# artery-VRU

./: CMakeLists.txt
scenarios/: CMakeLists.txt
scenarios/artery/results/: envmod-#0.sca  inet-#0.sca
scenarios/car2car-grid/results/: cam_bsp-#0.sca  cam_bsp-#0.vec
scenarios/crash_junction_InTAS/: CMakeLists.txt  InTAS_Crossing.net.xml  audiKreis.xml  buildings.poly.xml  crossing.sumocfg  omnetpp.ini  routes.rou.xml  sensors.xml  services-envmod.xml  services.xml  usecases.xml  vehicles.xml
scenarios/crash_junction_InTAS/results/: envmod-#0.sca  envmod-#0.vci  envmod-#0.vec  inet-#0.sca  inet-#0.vec  sumo-gui-#0.vci
scenarios/highway-police/results/: envmod-#0.sca  envmod-#0.vci  envmod-#0.vec  sumo-gui-#0.vci
scenarios/roundabout_InTAS/: CMakeLists.txt  omnetpp.ini  sensors-NR.xml  sensors-baseline.xml  sensors-cpm-NR.xml  sensors-cpm.xml  sensors-only_NR.xml  sensors-vam.xml  sensors.xml  services-envmod-baseline.xml  services-envmod-cpm.xml  services-envmod-radar.xml  services-envmod-vam.xml  services-envmod.xml  services-storyboard.xml  services.xml  story.py
scenarios/roundabout_InTAS/results/: envmod-#0.sca  envmod-#0.vci  inet-#0.vci  inet_multiple_vehicle_types-seed=0-#0.sca
scenarios/roundabout_InTAS/roundabout/: .AudiKreis.sumocfg.swo  AudiKreis.net.xml  AudiKreis.osm  AudiKreis.rou.alt.xml  AudiKreis.rou.xml  AudiKreis.sumocfg  AudiKreis.trip.xml  AudiKreis_pedestrians.rou.alt.xml  AudiKreis_pedestrians.rou.xml  AudiKreis_pedestrians.trip.xml  Audikreis.add.xml  vut.rou.xml
src/artery/: CMakeLists.txt
src/artery/application/: CPObject.cc  CPObject.h  CPService.cc  CPService.h  CPService.ned  CaService.cc  Constants.hpp  DCCFacility.cpp  DCCFacility.h  DCCFacility.ned  EmergencyBrake.cc  EmergencyBrake.h  EmergencyBrake.ned  FilterObjects.cc  FilterObjects.h  InfoObject.cpp  InfoObject.h  ItsG5BaseService.h  PersonDataProvider.cc  PersonDataProvider.h  PersonKinematics.cc  PersonKinematics.h  PersonMiddleware.cc  PersonMiddleware.h  VaObject.cc  VaObject.h  VaService.cc  VaService.h  VaService.ned  VehicleDataProvider.cc  VehicleDataProvider.h
src/artery/application/cam/: Cam_UseCase.cc  Cam_UseCase.h  EmergencyBrake_UseCase.cc  EmergencyBrake_UseCase.h
src/artery/cpm/: cpm.asn  cpm.asn.old  cpm.hpp  filesToAdd.txt  generateFile.bash  results.txt  rmUselessFiles.py
src/artery/cpm/compiled/: AngleConfidence.c  AngleConfidence.h  CPM.c  CPM.h  CartesianAngle.c  CartesianAngle.h  CartesianAngleValue.c  CartesianAngleValue.h  CollectivePerceptionMessage.c  CollectivePerceptionMessage.h  CpmManagementContainer.c  CpmManagementContainer.h  CpmParameters.c  CpmParameters.h  Distance.c  Distance.h  DistanceConfidence.c  DistanceConfidence.h  DistanceValue.c  DistanceValue.h  DynamicStatus.c  DynamicStatus.h  FrontOverhang.c  FrontOverhang.h  HitchPointOffset.c  HitchPointOffset.h  Identifier.c  Identifier.h  IntersectionID.c  IntersectionID.h  IntersectionReferenceID.c  IntersectionReferenceID.h  IntersectionTopologyPosition.c  IntersectionTopologyPosition.h  LaneID.c  LaneID.h  Latit.c  Latit.h  ListOfPerceivedObjectContainer.c  ListOfPerceivedObjectContainer.h  (+127 more)
src/artery/envmod/: CMakeLists.txt  EnvironmentModelObject.h  EnvironmentModelObstacle.h  EnvironmentModelPerson.cc  EnvironmentModelPerson.h  GlobalEnvironmentModel.cc  GlobalEnvironmentModel.h  GlobalEnvironmentModel.ned  LocalEnvironmentModel.cc  LocalEnvironmentModel.h  Person.ned
src/artery/envmod/sensor/: BaseSensor.h  CPmSensor.cc  CPmSensor.h  FovSensor.cc  FovSensor.h  FovSensor.ned  RadarSensor.ned  SeeThroughSensor.ned  Sensor.h  SensorConfiguration.cc  SensorConfiguration.h  SensorDetection.h  SensorPosition.cc  SensorPosition.h  VamSensor.cc  VamSensor.h  VamSensor.ned
src/artery/inet/: ChannelLoadRx.ned  PowerLevelRx.h  PowerLevelRx.ned  VanetNic.ned
src/artery/networking/: LimericDccEntity.h  PersonPositionProvider.cc  PersonPositionProvider.h
src/artery/traci/: ControllablePerson.h  ObjIdentification.cc  ObjIdentification.h  PersonController.cc  PersonController.h  PersonMobility.cc  PersonMobility.h  PersonType.cc  PersonType.h  VehicleController.cc  VehicleController.h
src/traci/: BasicNodeManager.h  CMakeLists.txt  ExtensibleNodeManager.cc  ExtensibleNodeManager.h  ExtensibleNodeManager.ned  InsertionDelayNodeManager.ned  InsertionDelayPersonPolicy.cc  InsertionDelayPersonPolicy.h  InsertionDelayPersonPolicy.ned  Manager.ned  PersonLifecycle.h  PersonPolicy.h  PersonPolicy.ned  PersonSink.h  RegionOfInterestNodeManager.ned  RegionOfInterestPersonPolicy.cc  RegionOfInterestPersonPolicy.h  RegionOfInterestPersonPolicy.ned
